# AioSQlite3

./: Pipfile  README.md  pyproject.toml  requirements.txt
aiosqlite3/: __init__.py  errors.py  functions.py
better_sqlite3/: __init__.py  errors.py
sqlite/: __init__.py  functions.py
tests/: test_basic.py
