[project]
name = "aiosqlite3"
version = "0.1.0"
description = "A Pythonic async SQLite3 wrapper using asyncio for aiohttp and other frameworks"
authors = [{ name = "foste1jj", email = "foste1jj@dev.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO"
]

[project.urls]
Homepage = "https://github.com/Horse1jj/better-sqlite3"
Repository = "https://github.com/Horse1jj/better-sqlite3"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

